# corrode

./: .gitignore  .travis.yml  CFG.hs  CONTRIBUTING.md  Dockerfile  Main.hs  Main.lhs  Main.md  Makefile  README.md  corrode.cabal  fixGitSymlinksForWindows.bat  stack.yaml
scripts/: corrode-cc  csmith-test
src/: Main.hs
src/Language/: Rust.hs
src/Language/C/: Interpret.hs
src/Language/C/Interpret/: Class.hs
src/Language/Rust/: AST.hs  Idiomatic.hs
src/Language/Rust/Corrode/: C.hs  C.lhs  C.md  CFG.hs  CFG.lhs  CFG.md  CrateMap.hs
src/Language/Rust/Corrode/CFG/: C.hs
tests/: test.hs
