name:                corrode
version:             0.1.0.0
license:             GPL-2
license-file:        LICENSE
author:              Jamey Sharp
maintainer:          jamey@minilop.net
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Rust,
                       Language.Rust.AST,
                       Language.Rust.Idiomatic,
                       Language.Rust.Corrode.C
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -pgmL markdown-unlit
  default-language:    Haskell2010
  build-depends:       base >=4.8,
                       containers,
                       language-c >=0.4 && <0.6,
                       markdown-unlit,
                       containers,
                       pretty,
                       transformers

executable corrode
  main-is:             Main.lhs
  ghc-options:         -Wall -pgmL markdown-unlit
  default-language:    Haskell2010
  build-depends:       base >=4.8,
                       bytestring,
                       corrode,
                       filepath,
                       language-c >=0.4 && <0.6,
                       markdown-unlit,
                       pretty,
                       transformers >=0.2
