name:                corrode
version:             0.1.0.0
license:             GPL-2
license-file:        LICENSE
author:              Jamey Sharp
maintainer:          jamey@minilop.net
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Rust,
                       Language.Rust.AST,
                       Language.Rust.Idiomatic,
                       Language.Rust.Corrode.C,
                       Language.Rust.Corrode.CFG,
                       Language.Rust.Corrode.CrateMap
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -pgmL markdown-unlit
  default-language:    Haskell2010
  build-depends:       base >=4.8,
                       array >= 0.4,
                       containers >= 0.5,
                       language-c >=0.6 && <0.7,
                       markdown-unlit,
                       pretty,
                       transformers

executable corrode
  main-is:             Main.lhs
  ghc-options:         -Wall -pgmL markdown-unlit
  default-language:    Haskell2010
  build-depends:       base >=4.8,
                       bytestring,
                       corrode,
                       filepath,
                       language-c >=0.6 && <0.7,
                       markdown-unlit,
                       pretty,
                       transformers >=0.2

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             test.hs
  build-depends:       base
                     , containers >= 0.5
                     , corrode
                     , pretty
                     , tasty
                     , tasty-quickcheck
                     , transformers >=0.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
